--- a/style.css
+++ b/style.css
@@ -107,3 +107,51 @@ h6{
     padding-inline: 50px;
 }
 
+.button-section{ 
+    border-radius: 12px;
+    background-color: #0A2640;
+    color: white;
+    background-image: url(img/bg.png) ;
+    background-repeat: no-repeat;
+    background-position: right top;
+}
+.bg-img{ 
+    background-color: white;
+    padding-inline: 100px;
+    padding-bottom: 100px;
+}
+.heading-sec{
+    padding-block: 50px;
+    padding-inline: 245px;
+}
+h4{
+    text-align: center;
+    font-weight: 200;
+    font-size: 48px;
+    line-height: 72px;
+}
+.emailbtn{
+    display: flex;
+    align-items:center;
+}
+.startbtn{
+    font-size: 20px;
+    margin-left: 10px;
+}
+.email{
+    font-size: 20px;
+    padding-left:32px ;
+    border-radius: 240px;
+    width: 350px;
+    height: 46px;
+    border: none;
+}
+.startbtn{
+    background-color: #65E4A3;
+    color:#0A2640;
+    border: none;
+    border-radius: 56px;
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+}
