--- a/style.css
+++ b/style.css
@@ -106,7 +106,6 @@ h6{
     padding-block: 16px;
     padding-inline: 50px;
 }
-
 .button-section{ 
     border-radius: 12px;
     background-color: #0A2640;
@@ -154,4 +153,60 @@ h4{
     cursor: pointer;
     width: 200px;
     height: 50px;
+}
+footer{
+    display: flex;
+    padding-left: 100px;
+    padding-right: 170px;
+    padding-block: 100px;
+}
+footer p{
+    font-size: 20px;
+    line-height: 32px;
+    color: #777777;
+    padding-right: 15px;
+    padding-bottom:64px ;
+    padding-top: 30px;
+}
+.reserved{
+    padding-top: 64px;
+    font-size: 16px;
+}
+.list-section{ 
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    line-height: 32px;
+} 
+.list-heading{
+    color: #000000;
+    font-size: 20px;
+    line-height: 32px;
+    font-weight: 700;
+    padding-bottom:32px ;
+}
+.list-section ,li {
+    list-style: none;
+    font-size: 20px;
+    line-height: 32px;
+    color:  #777777;
+    margin-left:50px ;
+    margin-bottom: 50px;
+}
+.list-section li p{
+    margin-bottom:0%;
+} 
+.list-section button{
+    margin: 10px;
+    font-size: 13px;
+    border:none;
+    border-radius: 20px;
+    background-color: #65E4A3;}
+.button{
+    display: flex;
+    align-items: center;
+} 
+.list1{
+   padding-right: 50px;
+   padding-bottom: 18px;
 }
